fix left alignment of project cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -96,9 +96,9 @@ body,
 .projects {
     width: 80vw;
     
-    padding: 10vh 0vw;
+    padding: 10vh 10vw;
 
-    justify-content: space-evenly;
+    justify-content: start;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
